Tweaked a comment, and gave the gazerlets a proxy for their particles when they're thrown.  Did the same for the hortlebort even though it's not fixing anything.

--- a/data/object_prototypes/base/effects_attache.cfg
+++ b/data/object_prototypes/base/effects_attache.cfg
@@ -41,6 +41,9 @@ properties: {
 		It's a little tedious, but it should actually be slightly robust in terms of testing - if these are ever missing, we don't get any useful errors, which sucks.   If they're "present but incorrect", though, we'll get an excellent slap-on-the-wrist that we've tried to assign something to an invalid variable name.
 
 
+		NOTE:  if you've got i.e. a thrown object that has particles, yes, this means you'll need to have an instance of the exact same attache in the thrown version.
+
+
 		TODO:  in the distant future, it'd be nice to refactor this whole system; this problem here is caused because we don't have introspection in the engine to map over an object's properties, and find one that 'matches' a given child.  Right now, objects are stored in two separate places in a parent - in direct variable references, and in an `_effects_attaches` array.  If we eliminated this, and made `_effects_attaches` into a dictionary, then we actually -could- map over the keys.  We could do a simple map over them to get the key when we were initially created, and then have that key from then on to re-assign ourselves later.   For now, we will type them in manually just to get this fixed, quickly.
 
 
