--- a/data/objects/enemies/bugs/hortlebort_grey.cfg
+++ b/data/objects/enemies/bugs/hortlebort_grey.cfg
@@ -34,6 +34,7 @@ properties: {
 			time_to_die: 60
 		})",
 		persistent: false,
+		variable_name: 'body_particles',
 	},
 },
 
@@ -91,6 +92,18 @@ object_type: [
 	solid_dimensions: ["enemy","common"],
 	properties: {
 		taxonomy: "TaxonomyType :: enum bug",
+
+		body_particles: {
+			type: "obj particle_attache",
+			init: "object('particle_attache',x,y, {
+				_particle_type:'hortlebort',
+				relative_y: 20,
+				parent: me,
+				time_to_die: 60
+			})",
+			persistent: false,
+			variable_name: 'body_particles',
+		},
 	},
 	animation: [
 		{
