--- a/data/objects/enemies/experimental/gazer_small_bare_harmless.cfg
+++ b/data/objects/enemies/experimental/gazer_small_bare_harmless.cfg
@@ -45,6 +45,25 @@ object_type: [
 		prototype: ["throwable_small_enemy"],
 		properties: {
 			taxonomy: "TaxonomyType :: enum stone",
+
+			aggro_particles: {
+				type: "obj legacy_particle_attache",
+				init: "object('legacy_particle_attache', mid_x, mid_y, {
+					_particle_type: 'gazer_boss_gazerlet_seek_and_destroy_particles',
+					parent: me,
+					time_to_die: 20,
+					zorder: me.zorder + 1,
+
+					customized_spawn_rate_modulations: [{
+						particle_id: 'gazer_boss_gazerlet_seek_and_destroy_particles',
+						expression: def(obj legacy_particle_attache particle_obj_context) -> int	
+							0
+					}],
+					variable_name: 'aggro_particles',
+				})",
+				persistent: false,
+			},
+
 		},
 		animation: [
 			{
