--- a/data/objects/effects/attaches/particle_attache.cfg
+++ b/data/objects/effects/attaches/particle_attache.cfg
@@ -7,15 +7,21 @@ zorder: "@include data/zorder.cfg:near_player_foreground_effects",
 
 properties: {
 #-------------------------- effects_attache overrides --------------------------#
-/*
-	At first, this seemed like a pretty slick idea;  automatically taper down all the particles when they're close to being removed.  In retrospect, this ended up botching one particular use of particles:  many of our particles end up being used as short-term "bursts" that happen right when a shot "dies" or is fired.  Due to a quirk in our timing, these objects happen to trigger their `turn_off` command, which is of course what trigger this change to `emission_rate` _immediate_ upon being spawned (if they're this kind of 'burst' effect).
-	
-	What this does, is that it makes any "indivdual types" of particles that do this entirely unable to customize their `emission_rate`, because literally from cycle 0 onwwards, their `emission_rate` is in control of the `turn_off` command listed below, and of course these animations aren't "summed up"; they're last-come, only served.
-	
-	More generally, this is just a problematic design, because unless we have a way to turn it off, it's the old "one size doesn't quite fit all" problem.  So what we do in this case is a pretty bulletproof solution:  we check, precisely, to see if they're trying to customize it at all, and if they are, we just entirely disable that "nice default" and let their customization be the thing that takes total control.
-*/
-
 	animation_attributes: "[string] :: if(_animations != null, map(_animations, (ParticleSystemAnimation <- value).attribute), [])",
+
+	do_setup: "execute(me, [
+					initialize_position,
+					if(_animations, map(_animations, apply_animation(value))),
+				])",
+
+
+	/*
+		At first, this seemed like a pretty slick idea;  automatically taper down all the particles when they're close to being removed.  In retrospect, this ended up botching one particular use of particles:  many of our particles end up being used as short-term "bursts" that happen right when a shot "dies" or is fired.  Due to a quirk in our timing, these objects happen to trigger their `turn_off` command immediately upon being spawned (if they're a 'burst' effect).
+	
+		What this does, is that it makes any "indivdual types" of particles that do this entirely unable to customize their `emission_rate`, because literally from cycle 0 onwwards, their `emission_rate` is in control of the `turn_off` command listed below, and of course these animations aren't "summed up"; they're last-come, only served.
+	
+		More generally, this is just a problematic design, because unless we have a way to turn it off, it's the old "one size doesn't quite fit all" problem.  So what we've done to fix this (and seems to have held up):  we check, precisely, to see if they're trying to customize it at all, and if they are, we just entirely disable that "nice default" and let their customization be the thing that takes total control.
+	*/
 	
 	turn_off: "if(not 'emission_rate' in animation_attributes,
 				animate(me, {
@@ -106,6 +112,5 @@ properties: {
 	",
 },
 
-on_create: "proto_event('effects_attache', 'create'); if(_animations, map(_animations, apply_animation(value)))",
 
 }
