Minor cleanup to the spider.cfg prototype.

--- a/data/object_prototypes/enemies_specialized/spider.cfg
+++ b/data/object_prototypes/enemies_specialized/spider.cfg
@@ -40,16 +40,16 @@ properties: {
 
 
 #-------------------------- custom behavior --------------------------#
-	player_lead_time: "int :: 30", 
+	player_lead_time: "int :: 30",
 	do_attack: "commands :: null",
 
 
 	solid_point: "def([decimal,decimal] vector) -> [decimal,decimal] # search exponentially for ground#
-			if((solid(level, lib.math.round(pointToCheck[0]), lib.math.round(pointToCheck[1])) where pointToCheck = zip(vector, [me.mid_x, me.mid_y], a+b))
-			or size(filter(vector, 'vec', abs(vec) > 1000)) > 0, 
-				vector, 
-				solid_point(map(vector, value*1.1))
-			)",
+		if((solid(level, lib.math.round(pointToCheck[0]), lib.math.round(pointToCheck[1])) where pointToCheck = zip(vector, [me.mid_x, me.mid_y], a+b))
+		or size(filter(vector, 'vec', abs(vec) > 1000)) > 0, 
+			vector, 
+			solid_point(map(vector, value*1.1))
+		)",
 			
 	turn: "[facing(-facing),set(me.animation, 'turn'),set(me.velocity_x,0)]",
 	
@@ -57,8 +57,13 @@ properties: {
 	process_retract: "[set(rotate, sin(cycle*7) * 4.0),set(animation, 'retract'+animation_suffix), set(time_in_animation, time_in_animation), if(cycle % 10 = 0, sound_falloff('spider-reel'+1d5+'.wav'))]",
 	animation_suffix: "lib.math.round(sin(cycle*12)*1.0+1.0)+1",  //smoothly oscillate between 1 -> 3
 
-	tryambush: "if(predicted_player_mid.x > mid_x - 20 and predicted_player_mid.x < mid_x + 20 and cycle%5 = 0,
-		fire_event('drop')) where predicted_player_mid = (obj frogatto_playable <- level.player).position_predictor.prediction(player_lead_time)",
+	tryambush: "[
+		if(
+			predicted_player_mid.x > mid_x - 20 and predicted_player_mid.x < mid_x + 20 and cycle%5 = 0,
+			fire_event('drop')
+		),
+	] where predicted_player_mid = 
+		(obj frogatto_playable <- level.player).position_predictor.prediction(player_lead_time)",
 
 	spinneret: "{x: 0, y: -32}",
 #-------------------------- vars --------------------------#
