Fixed level.player.position_predictor which was getting stuck with a stale ref to an old Frogatto after a respawn.
This fixes a few enemies not attacking, such as the spiders. Due to a quirk
in how the position_predictor worked, this meant that the farther away you
were from the point of death, the more inaccurate the predicted position
would be. So the enemy you died to would still work fine, but all the rest
of the enemies - after your first death on the level - would be unable to
accurately predict where you were after.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -23,31 +23,48 @@ load_variations: "fat",
 properties: {						
 #-------------------------- constructor/destructor logic --------------------------#
 	common_frogatto_specific_constructor_commands: "	[
-															set_up_gui() ;
-															gui_boss_progress_display.reset(),
+		set_up_gui() ;
+		gui_boss_progress_display.reset(),
 
-																/* some mostly cosmetic/gameplay-related stuff */
-															animation('stand'),
-															set(rotate, 0),
-															set(invincible, 50),
-															set(brightness, 255),
-															set(velocity_x, 0),
-															set(velocity_y, 0),
-															move_to_standing(),
-															set(time_last_hit, level.cycle - 200),
-															spawn_shadow('small'),
-															remap_my_attaches_to_me ;
-															readd_attaches(me),
-															if(not item_quantities, initialize_items),
+		/* some mostly cosmetic/gameplay-related stuff */
+		animation('stand'),
+		set(rotate, 0),
+		set(invincible, 50),
+		set(brightness, 255),
+		set(velocity_x, 0),
+		set(velocity_y, 0),
+		move_to_standing(),
+		set(time_last_hit, level.cycle - 200),
+		spawn_shadow('small'),
+		remap_my_attaches_to_me ;
+		
+		/*
+			We're trying to fix an issue here where the position_predictor is
+			basically referring to a 'stale/zombie' version of the player
+			character, after loading from a save.  If you just launch a level,
+			then the predictor will work just fine, but if you respawn from a
+			checkpoint, it'll refer to the prior version of the player, which
+			gives incorrect coordinates.   This because the on_create behavior
+			for the player triggers the `init` statements inside of variables,
+			but the `on_load` et al fail to actually run any of those
+			variables, wrongly assuming that if they've already been built,
+			that whatever's in them will happily stay correct across launches.
+		*/
+		set(
+			position_predictor,
+			construct('predictive_player_motion',{this_obj: me, the_player: me}),
+		),
+		readd_attaches(me),
+		if(not item_quantities, initialize_items),
 
-															//development cheats
-															schedule(1, ; [
-																if(MODULE_OPTIONS.supes, supes),
-																if(MODULE_OPTIONS.hax, hax),
-																if(MODULE_OPTIONS.lucre, lucre),
-															]),
+		//development cheats
+		schedule(1, ; [
+			if(MODULE_OPTIONS.supes, supes),
+			if(MODULE_OPTIONS.hax, hax),
+			if(MODULE_OPTIONS.lucre, lucre),
+		]),
 
-														]",
+	]",
 
 	specific_player_obj_constructor: "commands :: [
 		common_frogatto_specific_constructor_commands,
