--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -12,7 +12,7 @@
 		txt: {type: "string", default: "+"},
 		size: "2",
 		font: "string :: 'numbers_gold_enormous'",
-		align: "'center'",
+		align: "'right'",
 		
 		
 		comparison_point_for_coins: { type: "int", default: 0 },
@@ -38,13 +38,13 @@
 		coin_icon: { type: "obj hud_gold_display.coin_icon", init: "object('hud_gold_display.coin_icon', x, y, {parent: me})", },
 	},
 
-	on_create: "[text(txt, font, size, align), add_object(coin_icon), set(coin_icon.relative_x, -80), set(coin_icon.relative_y, 8)]",
+	on_create: "[text(txt, font, size, align), add_object(coin_icon), set(coin_icon.relative_x, 60), set(coin_icon.relative_y, 8)]",
 
 
 	//Sync UI state with Frogatto.
 	on_process: "[
 		if(level.player is obj frogatto_playable, [
-			me.set_text('×' + str(level.player.coins)),
+			me.set_text( str(level.player.coins) + '×'),
 			poll_for_coin_changes,
 			set_vertical_pos,
 		])
