Much cleaner/quicker retraction for the coins HUD.

--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -17,12 +17,13 @@
 		
 		comparison_point_for_coins: { type: "int", default: 0 },
 		last_changed_coins: { type: "int", default: 0 },
-		display_timeout: "decimal :: 1500",
+		display_timeout: "decimal :: 100",
 		
 		vertical_full_offset: "decimal :: 90",
 		vertical_offset: "vertical_full_offset * lib.math.ease_in_out_elastic(ratio)
 		
-			where ratio = (1.0 - min(1.0, decimal(level.cycle -  last_changed_coins)/display_timeout ))",
+			where ratio = (1.0 - min(1.0, decimal(level.cycle -  (last_changed_coins + delay) )/display_timeout ))
+			where delay = 200",
 		
 		poll_for_coin_changes: "if(comparison_point_for_coins != level.player.coins,
 									[
