Uncommented the milgram's throne room encounter.  Oops.

--- a/data/level/Dungeon/milgrams-throne-room.cfg
+++ b/data/level/Dungeon/milgrams-throne-room.cfg
@@ -135,9 +135,9 @@
 					fire_event('talk_frogatto'),
 					schedule(2, fire_event('check_start')))]",
 			"on_create": "[
-				/*set(level.zoom, 2),
+				set(level.zoom, 2),
 				set(level.player.control_lock, ['ctrl_right']),
-				fire_event('check_start')*/]",
+				fire_event('check_start')]",
 			"on_end_dash_anim": "[swallow_event(), set(animation, 'dash')]",
 			"on_talk_frogatto": "[
 				begin_skip_dialog_sequence(),
