Fixed a misspelling in a comment.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -157,7 +157,7 @@ properties: {
 
 	
 	/*
-		tracking key presses:  we can accomplish keyup, keyown, and key-held by doing the following:
+		tracking key presses:  we can accomplish keyup, keydown, and key-held by doing the following:
 	 	
 	 	By setting the cycle on which a key is pressed, we limit ourselves to a set of keys that need to be re-checked on later frames to see if they're still held down.  We don't need to register key-tracking up-front, as having an access of ctrl_keyboard in on_process will make this implicit (though any gap of more than one cycle in on_process tracking will break continuity of key-holds).
 	 
