Setting up some hooks to allow a custom conversation if you flip a certain lever.

--- a/data/level/Forest/tempo-bridge.cfg
+++ b/data/level/Forest/tempo-bridge.cfg
@@ -765,6 +765,11 @@
 			"property_data": {
 				"event": "tempo_bridge_platform_active"
 			},
+			"on_custom_trigger_on_hook": "[
+				transient_speech_dialog(
+					whatran, [~Yo.~]
+				),
+			] where whatran = find_or_die(level.chars, value is obj whatran_npc)",
 			"type": "lever_wooden",
 			"x": 672,
 			"y": 224
