--- a/data/object_prototypes/general/switches_and_triggers/pullable.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable.cfg
@@ -49,6 +49,7 @@ properties: {
 			statefully_turn_on,
 			broadcast_trigger(1),
 			set(last_toggled, cycle),
+			fire_event(me, 'custom_trigger_on_hook'),
 		]",
 		
 	toggle_off: "[
@@ -57,6 +58,7 @@ properties: {
 			statefully_turn_off,
 			broadcast_trigger(0),
 			set(last_toggled, cycle),
+			fire_event(me, 'custom_trigger_off_hook'),
 		]",
 	
 		/*
