--- a/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
+++ b/data/object_prototypes/general/switches_and_triggers/pullable_untracked.cfg
@@ -118,10 +118,10 @@ properties: {
 							if(_lock_coordinator != null,
 								if(new_state = true,
 									if(not is_this_active,
-										[_lock_coordinator.activate(me), visually_turn_on, set(last_toggled, cycle)]
+										[_lock_coordinator.activate(me), visually_turn_on, set(last_toggled, cycle), fire_event(me, 'custom_trigger_on_hook')]
 									),
 									if(is_this_active,
-										[_lock_coordinator.deactivate(me), visually_turn_off, set(last_toggled, cycle)]
+										[_lock_coordinator.deactivate(me), visually_turn_off, set(last_toggled, cycle), fire_event(me, 'custom_trigger_off_hook')]
 									)
 								)
 							)",
