Some work towards enabling the prospera conversation when you never met her for the first time.

--- a/data/level/Forest/prosperas-promontory.cfg
+++ b/data/level/Forest/prosperas-promontory.cfg
@@ -1166,6 +1166,7 @@
 				"min_x": -47,
 				"start_mode": "stand"
 			},
+			"on_start_level": "if( level.player.get_stored_event('defeated_gazer_boss'), remove_object(me) )",
 			"type": "prospera_npc",
 			"x": 96,
 			"y": 243
@@ -1491,9 +1492,14 @@
 				where camera_target = get_object_or_die(level, 'camera_target')
 				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
 				where frogatto = (obj frogatto_playable <- level.player)",
-			"on_triggered": "if( not level.player.get_stored_event('started_initial_prospera_conversation'), fire_event(me,'conversation_part1'),
-								if( level.player.get_stored_event('finished_initial_prospera_conversation'), remove_object(me))
-							)",
+			"on_triggered": "if(
+				(not level.player.get_stored_event('started_initial_prospera_conversation'))
+			 	and
+			 	(not level.player.get_stored_event('defeated_gazer_boss')) /* this is here just in case you're doing the 'alternate route' of beating the boss before meeting prospera. */
+			,
+				fire_event(me,'conversation_part1'),
+				if( level.player.get_stored_event('finished_initial_prospera_conversation') or level.player.get_stored_event('defeated_gazer_boss'), remove_object(me))
+			)",
 			"property_data": {
 				"_x2_bound": 1040,
 				"_x_bound": 928,
