--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -529,6 +529,65 @@
 			"y": 394
 		},
 		{
+			"_uuid": "c4cc26a92a204882bd1d2971748103c6",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "postfight_gate_unlock_controller",
+			"on_unlock_gate": "[
+				speech_dialog(
+									frogatto.add_control_lock([], 'prospera_cutscene'),
+									set(level.zoom, 2.0),
+									set(prospera.animation, 'emote_emphatic'),
+						prospera,	[~Give a moment to unlock this...~],
+
+
+						level.player.store_event('prosperas-workshop-unlocked', 1),
+						schedule(50, fire_event(me, 'post_unlock_gate')),
+
+					),
+				]
+
+				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
+				where frogatto = (obj frogatto_playable <- level.player)",
+				
+			"on_post_unlock_gate": "[
+				speech_dialog(
+									set(prospera.animation, 'emote_emphatic'),
+						prospera,	[~Do be careful in here.~],
+
+						prospera.walk_to(3900, def()->commands null ),
+						screen_flash([0,0,0,0], [0,0,0,5], 78),
+
+						schedule(75, [
+							frogatto.remove_control_lock('prospera_cutscene'),
+							level.player.store_event('prosperas-workshop-unlocked', 1),
+							level.player.store_event('finished_post_gazer_boss_conversation', 1),
+
+							set(level.focus, []),
+							set(level.zoom, 1.0),
+							schedule(1, ; set(level.lock_screen, null)),
+
+							schedule(2, teleport('prosperas-workshop.cfg','','instant'))
+						]),
+
+
+					),
+				]
+
+				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
+				where frogatto = (obj frogatto_playable <- level.player)",
+
+			"property_data": {
+				"_x2_bound": 1232,
+				"_x_bound": 448,
+				"_y2_bound": 2618,
+				"_y_bound": 2154
+			},
+			"type": "level_controller",
+			"x": 893,
+			"y": 394
+		},
+		{
 			"_uuid": "26774a471e5f4bffb6db8a0a58927391",
 			"current_frame": "normal",
 			"custom": true,
@@ -650,57 +709,16 @@
 									prospera.walk_to(3500, def()->commands null ),
 									schedule(150, [
 										frogatto.remove_control_lock('prospera_cutscene'),
-										frogatto.scripted_move_to_x(3350, 1, def()->commands fire_event(me, 'unlock_gate') )
+										frogatto.scripted_move_to_x(3350, 1, def()->commands fire_event(gate_controller, 'unlock_gate') )
 									]),
 
 				),
 			] 	
 
 				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
+				where gate_controller = (obj level_controller <- get_object_or_die(level, 'postfight_gate_unlock_controller'))
 				where frogatto = (obj frogatto_playable <- level.player)",
-			"on_unlock_gate": "[
-				speech_dialog(
-									frogatto.add_control_lock([], 'prospera_cutscene'),
-									set(level.zoom, 2.0),
-									set(prospera.animation, 'emote_emphatic'),
-						prospera,	[~Give a moment to unlock this...~],
 
-
-						level.player.store_event('prosperas-workshop-unlocked', 1),
-						schedule(50, fire_event(me, 'post_unlock_gate')),
-
-					),
-				]
-
-				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
-				where frogatto = (obj frogatto_playable <- level.player)",
-				
-			"on_post_unlock_gate": "[
-				speech_dialog(
-									set(prospera.animation, 'emote_emphatic'),
-						prospera,	[~Do be careful in here.~],
-
-						prospera.walk_to(3900, def()->commands null ),
-						screen_flash([0,0,0,0], [0,0,0,5], 78),
-
-						schedule(75, [
-							frogatto.remove_control_lock('prospera_cutscene'),
-							level.player.store_event('prosperas-workshop-unlocked', 1),
-							level.player.store_event('finished_post_gazer_boss_conversation', 1),
-
-							set(level.focus, []),
-							set(level.zoom, 1.0),
-							schedule(1, ; set(level.lock_screen, null)),
-
-							schedule(2, teleport('prosperas-workshop.cfg','','instant'))
-						]),
-
-
-					),
-				]
-
-				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
-				where frogatto = (obj frogatto_playable <- level.player)",
 
 			"property_data": {
 				"_x2_bound": 1232,
