Got a working conversation in for the case where you beat the gazer boss, but didn't talk to prospera yet.

--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -508,7 +508,13 @@
 			where postfight_scene_setup = [
 									set(frogatto.facing, 1),
 									set(prospera.mid_x, 1250),
-									schedule(1, fire_event(controller_obj,'start_event')),
+									schedule(1, fire_event(
+										if(
+											(not level.player.get_stored_event('finished_initial_exterior_prospera_conversation')),
+											sequence_break_controller_obj,
+											controller_obj
+										)
+									,'start_event')),
 									frogatto.add_control_lock([], 'prospera_cutscene'),
 								]
 
@@ -517,7 +523,9 @@
 			where frogatto = (obj frogatto_playable <- level.player)
 						
 			where camera_obj = get_object_or_die(level, 'camera1')
-			where controller_obj = get_object_or_die(level, 'postfight_conversation_controller')",
+			where controller_obj = get_object_or_die(level, 'postfight_conversation_controller')
+			where sequence_break_controller_obj = get_object_or_die(level, 'sequence_break_conversation_controller')
+			",
 			"property_data": {
 				"_x2_bound": 1232,
 				"_x_bound": 448,
@@ -585,6 +593,106 @@
 			},
 			"type": "level_controller",
 			"x": 893,
+			"y": 394
+		},
+		{
+			"_uuid": "b4f210280d714c33a92b918dc0ae6746",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "sequence_break_conversation_controller",
+			"on_start_event": "[
+				
+					set(level.zoom, 1.0),
+					set(level.focus, [prospera]),
+					set(prospera.animation, 'emote_surprised')
+				
+				;
+				execute(prospera, sleep_until_animation_finished())
+				;
+				
+
+				speech_dialog(
+									set(frogatto.facing, -1),
+									set(prospera.facing, 1),
+									set(prospera.animation, 'emote_emphatic'),
+						prospera,	[~So, <em>under normal circumstances</em>,\\nI'd do a lengthy introduction here.~],
+									prospera.walk_to(1600, def()->commands fire_event(me, 'event_part2') ),
+				),
+			] 	
+
+				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
+				where frogatto = (obj frogatto_playable <- level.player)",
+
+			"on_event_part2": "[speech_dialog(
+				prospera,	[~I'm Prospera, the witch.  I guard this town.\\nWhat the <em>hell</em> did you just do?!?~],
+							set(frogatto.animation, 'emote_nod'),
+				frogatto,	[~Well, I recently talked to this chubby,\\nguru-looking fellow sitting by a tree.~],
+				prospera,	[~More, <em>recently</em>, perhaps, you might\\nrecall killing a giant stone eyeball.~],
+							[~Like, less than 5 minutes ago.\\nI want details.~],
+				frogatto,	[~I hurt it until it died, while trying not to get hurt.~],
+				prospera,	[~...~],
+							[~I'm not going to threaten you, because\\nI have no idea who I'm dealing with here.~],
+							[~But rest assured we'd get along way better\\nif you'd deal straight with me here.~],
+				frogatto,	[~Okay.\\nI've been trying to go east of Tempo Village.~],
+							[~I got hard-stopped by some ... blue force fields,\\nI guess.  Never seen anything like it.~],
+							[~I couldn't figure out any way to get further,\\nbut there was this mine entrance right there.~],
+							[~So I dipped into the mines, which was pretty\\ndifficult to get through on its own.~],
+							[~At the bottom I fell into this giant chamber\\nwith that big eyeball in it.~],
+							[~It was do or die.  I decided on <em>do</em>.~],
+				prospera,	[~Do you have any idea what you just pulled off?~],
+				frogatto,	[~I'm gonna say 'no' in hopes of learning something.~],
+				prospera,	[~We've been considering putting a <em>task force</em>\\ntogether to take that thing on.~],
+				frogatto,	[~And I just took it out solo, huh?~],
+							[~...~],
+							[~I could tell that thing was <em>Bad News</em>,\\nbut wow...~],
+							[~...~],
+							[~I don't think you're gonna like this answer,\\nbut I'm not some kind of trained professional.~],
+							[~Dead honest.  I'm just some random guy\\nwho got very desperate and <em>very</em> lucky.~],
+
+				prospera,	[~This incongruity really bugs me.~],
+							[~To be honest from my end I'm mainly concerned\\nabout getting my belongings caged by a 'trained professional'.~],
+							[~'Thief', 'Assassin', or any mix of the two.~],
+							[~Then again, it'd be MUCH easier for them to\\nstart the job by offing me in my sleep.~],
+							[~None of this adds up.~],
+							[~...~],
+							[~You know...~],
+							[~All else notwithstanding,\\nwe certainly owe you for helping us out.~],
+							[~Let's just do some business, and maybe\\nyou'll start to make more sense?~],
+							
+				frogatto,	[~Okay.~],
+				prospera,	[~You just did us a huge favor.\\nIs there something we can do in exchange?~],
+				frogatto,	[~I'd like to know how to get through\\nthose force fields near the town.~],
+				prospera,	[~You genuinely don't know what those are?\\nThose things are <em>actually</em> stopping you?~],
+				frogatto,	[~... yeah?~],
+							[~Interesting.~],
+							[~I tell you what ... would you be\\ninterested in tools?  Magic tools?~],
+							[~I can give you something to take down those barriers.~],
+							[~In fact, I could trade all sorts of things.\\nSound good?~],
+				frogatto,	[~Sure!~],
+				prospera,	[~Well then, follow me, if you please...~],
+
+
+							set(level.zoom, 1.0),
+							prospera.walk_to(3500, def()->commands null ),
+							schedule(150, [
+								frogatto.remove_control_lock('prospera_cutscene'),
+								frogatto.scripted_move_to_x(3350, 1, def()->commands fire_event(gate_controller, 'unlock_gate') )
+							]),
+				)
+			] 	
+
+				where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
+				where gate_controller = (obj level_controller <- get_object_or_die(level, 'postfight_gate_unlock_controller'))
+				where frogatto = (obj frogatto_playable <- level.player)",
+
+			"property_data": {
+				"_x2_bound": 1232,
+				"_x_bound": 448,
+				"_y2_bound": 2618,
+				"_y_bound": 2154
+			},
+			"type": "level_controller",
+			"x": 913,
 			"y": 394
 		},
 		{
