Don't give the player a chance to mess up.  Immediately send them into prospera's house after beating the boss, rather than outside of it.

--- a/data/level/Forest/gazer-boss.cfg
+++ b/data/level/Forest/gazer-boss.cfg
@@ -809,7 +809,7 @@
 			"label": "postfight_controller",
 			"on_postfight_outro": "	schedule( 150, 
 								[
-									frogatto.do_post_victory_transport('prosperas-promontory.cfg', 'camera_target'),
+									frogatto.do_post_victory_transport('prosperas-house.cfg', 'interior_door'),
 									frogatto.store_event('defeated_gazer_boss',1),
 								]) where frogatto = (obj frogatto_playable <- level.player)
 							",
