Fixed a hole in the level tiles, and fixed the transition between prosperas-house and her workshop.

--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -735,65 +735,60 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_291683b7",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1106,
-			"y": 227,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_bubble_shield"
-			},
+			"y": 227
 		},
 		{
 			"_uuid": "1682886eb62d47e498507120f7b76cba",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_5839bb2b",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1161,
-			"y": 227,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_skipback_sigil"
-			},
+			"y": 227
 		},
 		{
 			"_uuid": "a42d9175fc4541cb8d21936a48a8d4b2",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_1fc8a369",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1305,
-			"y": 232,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_acid_shot_talisman"
-			},
+			"y": 232
 		},
 		{
 			"_uuid": "e9c6dc637e294af981f3b2369d684faf",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_282bf8cd",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1352,
-			"y": 233,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_fire_shot_talisman"
-			},
+			"y": 233
 		},
 		{
 			"_uuid": "8c2bc4e6da3a4a05951b1aef62384fc7",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_54f72a01",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1676,
-			"y": 225,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_ice_corona_talisman"
-			},
+			"y": 225
 		},
 		{
 			"_uuid": "2c4d12d42410447bb04beca53a014ed2",
@@ -802,36 +797,31 @@
 			"label": "_22c14046",
 			"type": "store_item",
 			"x": 1729,
-			"y": 176,
-			"property_data": {
-				"settable_item_id": "@eval enum item_ammo_creating"
-			},
+			"y": 176
 		},
 		{
 			"_uuid": "9eaf32bae9b849ee996dc0f07f1764de",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_3ec05c39",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1812,
-			"y": 231,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_bubble_shield"
-			},
+			"y": 231
 		},
 		{
 			"_uuid": "4d6743a0e0f34c61873e705770c926c9",
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_3030f9",
+			"property_data": {
+				"is_in_foreground": true
+			},
 			"type": "store_item",
 			"x": 1870,
-			"y": 229,
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_wall_sticker_block"
-			},
+			"y": 229
 		}
 	],
 	"dimensions": [384,-640,3455,767],
@@ -935,6 +925,52 @@
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "background_parallax_floors"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_decor"
 		},
 		{
 			"tiles": ",
@@ -1063,7 +1099,13 @@
 ,
 ,
 ,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wfp,wfp,wfp",
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,wfp,wfp,wfp
+,
+,
+,
+,
+,
+,",
 			"unique_tiles": ",wfp",
 			"variations": "",
 			"x": 0,
@@ -1111,7 +1153,7 @@
 ,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
-,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
+,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
 ,,,,,,,,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl,wwl
@@ -1183,6 +1225,16 @@
 			"zorder": "interior_solid_ground_tiles_overlays"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_solid_ground_tiles"
+		},
+		{
 			"tiles": ",
 ,
 ,
@@ -1218,6 +1270,108 @@
 			"y": -384,
 			"y_speed": 100,
 			"zorder": "pillars"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "rail_tracks"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "npcs"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
 		},
 		{
 			"tiles": ",
@@ -1258,6 +1412,52 @@
 			"y": -480,
 			"y_speed": 100,
 			"zorder": "black_fill_tiles"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "foreground_parallax_objects"
+		},
+		{
+			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "",
