Added emotes to the sequence-break prospera conversation.

--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -624,51 +624,89 @@
 				where frogatto = (obj frogatto_playable <- level.player)",
 
 			"on_event_part2": "[speech_dialog(
+							set(prospera.animation, 'emote_annoyed'),
 				prospera,	[~I'm Prospera, the witch.  I guard this town.\\nWhat the <em>hell</em> did you just do?!?~],
 							set(frogatto.animation, 'emote_nod'),
 				frogatto,	[~Well, I recently talked to this chubby,\\nguru-looking fellow sitting by a tree.~],
+							set(prospera.animation, 'emote_emphatic'),
 				prospera,	[~More, <em>recently</em>, perhaps, you might\\nrecall killing a giant stone eyeball.~],
+							set(prospera.animation, 'emote_annoyed'),
 							[~Like, less than 5 minutes ago.\\nI want details.~],
+							set(frogatto.animation, 'emote_oh'),
 				frogatto,	[~I hurt it until it died, while trying not to get hurt.~],
 				prospera,	[~...~],
+							execute(prospera, [set(prospera.animation, 'emote_remove_hat'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk_with_hat_off')]),
 							[~I'm not going to threaten you, because\\nI have no idea who I'm dealing with here.~],
+							set(prospera.animation, 'emote_talk_with_hat_off'),
 							[~But rest assured we'd get along way better\\nif you'd deal straight with me here.~],
+							set(frogatto.animation, 'emote_talk'),
 				frogatto,	[~Okay.\\nI've been trying to go east of Tempo Village.~],
+							set(frogatto.animation, 'emote_oh'),
 							[~I got hard-stopped by some ... blue force fields,\\nI guess.  Never seen anything like it.~],
+							set(frogatto.animation, 'emote_confused'),
 							[~I couldn't figure out any way to get further,\\nbut there was this mine entrance right there.~],
+							set(frogatto.animation, 'emote_talk'),
 							[~So I dipped into the mines, which was pretty\\ndifficult to get through on its own.~],
+							set(frogatto.animation, 'emote_geez'),
 							[~At the bottom I fell into this giant chamber\\nwith that big eyeball in it.~],
+							set(frogatto.animation, 'emote_confused'),
 							[~It was do or die.  I decided on <em>do</em>.~],
+							execute(prospera, [set(prospera.animation, 'emote_restore_hat'); sleep_until_animation_finished(); set(prospera.animation, 'emote_annoyed')]),
 				prospera,	[~Do you have any idea what you just pulled off?~],
+							set(frogatto.animation, 'emote_nod'),
 				frogatto,	[~I'm gonna say 'no' in hopes of learning something.~],
+							set(prospera.animation, 'emote_surprised'),
 				prospera,	[~We've been considering putting a <em>task force</em>\\ntogether to take that thing on.~],
+							set(frogatto.animation, 'emote_raisedfinger'),
 				frogatto,	[~And I just took it out solo, huh?~],
 							[~...~],
+							set(frogatto.animation, 'emote_geez'),
 							[~I could tell that thing was <em>Bad News</em>,\\nbut wow...~],
 							[~...~],
+							set(frogatto.animation, 'emote_confused'),
 							[~I don't think you're gonna like this answer,\\nbut I'm not some kind of trained professional.~],
+							set(frogatto.animation, 'emote_talk'),
 							[~Dead honest.  I'm just some random guy\\nwho got very desperate and <em>very</em> lucky.~],
 
+							execute(prospera, [set(prospera.animation, 'emote_cross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk_with_arms_crossed')]),
 				prospera,	[~This incongruity really bugs me.~],
-							[~To be honest from my end I'm mainly concerned\\nabout getting my belongings caged by a 'trained professional'.~],
-							[~'Thief', 'Assassin', or any mix of the two.~],
+							set(prospera.animation, 'emote_talk_with_arms_crossed'),
+							[~To be honest, from my end, I'm mainly\\nconcerned that I'm getting scoped out.~],
+							set(prospera.animation, 'emote_talk_with_arms_crossed'),
+							[~Some 'trained professional' with ill intent.~],
+							execute(prospera, [set(prospera.animation, 'emote_uncross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_annoyed')]),
 							[~Then again, it'd be MUCH easier for them to\\nstart the job by offing me in my sleep.~],
+							set(prospera.animation, 'emote_talk'),
 							[~None of this adds up.~],
 							[~...~],
+							set(prospera.animation, 'emote_talk'),
 							[~You know...~],
+							set(prospera.animation, 'emote_surprised'),
 							[~All else notwithstanding,\\nwe certainly owe you for helping us out.~],
+							set(prospera.animation, 'emote_emphatic'),
 							[~Let's just do some business, and maybe\\nyou'll start to make more sense?~],
 							
+							set(frogatto.animation, 'emote_nod'),
 				frogatto,	[~Okay.~],
+							set(prospera.animation, 'emote_emphatic'),
 				prospera,	[~You just did us a huge favor.\\nIs there something we can do in exchange?~],
+							set(frogatto.animation, 'emote_confused'),
 				frogatto,	[~I'd like to know how to get through\\nthose force fields near the town.~],
+							execute(prospera, [set(prospera.animation, 'emote_cross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk_with_arms_crossed')]),
 				prospera,	[~You genuinely don't know what those are?\\nThose things are <em>actually</em> stopping you?~],
+							set(frogatto.animation, 'emote_geez'),
 				frogatto,	[~... yeah?~],
-							[~Interesting.~],
+							execute(prospera, [set(prospera.animation, 'emote_uncross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk')]),
+				prospera,	[~Interesting.~],
+							set(prospera.animation, 'emote_surprised'),
 							[~I tell you what ... would you be\\ninterested in tools?  Magic tools?~],
+							set(prospera.animation, 'emote_emphatic'),
 							[~I can give you something to take down those barriers.~],
+							set(prospera.animation, 'emote_talk'),
 							[~In fact, I could trade all sorts of things.\\nSound good?~],
+							set(frogatto.animation, 'emote_raisedfinger'),
 				frogatto,	[~Sure!~],
+							set(prospera.animation, 'emote_emphatic'),
 				prospera,	[~Well then, follow me, if you please...~],
 
 
