Prospera is now correctly absent from her house, and permanently present in her workshop, after you're introduced to her workshop.

--- a/data/level/Forest/prosperas-house.cfg
+++ b/data/level/Forest/prosperas-house.cfg
@@ -129,6 +129,7 @@
 				"turning_behaviour": "never"
 			},
 			"type": "prospera_npc",
+			"on_start_level": "if(level.player.get_stored_event('introduced_prosperas_workshop'), remove_object(me))",
 			"x": 1596,
 			"y": 155
 		},
@@ -476,12 +477,38 @@
 			"y": -96
 		},
 		{
+			"_uuid": "05ff5c03ac3542d58e0d26091f18dc63",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"type": "level_controller",
+			"x": 1006,
+			"y": -96,
+			"on_start_level": "
+				/*
+					this is a dumb check here to guard against failing checks for the prospera object.  The other cutscene controllers need to be aware of her; this one doesn't.  If you've already had her workshop conversation, though — she's gone (she's in the workshop from then on).
+				*/
+				if(not level.player.get_stored_event('introduced_prosperas_workshop'),
+					fire_event(scene_starter, 'start_cutscene')
+				)
+				
+				where scene_starter = get_object_or_die(level, 'scene_starter')
+
+			",
+			"property_data": {
+				"_x2_bound": 1232,
+				"_x_bound": 448,
+				"_y2_bound": 2618,
+				"_y_bound": 2154
+			},
+		},
+		{
 			"_uuid": "01f843748d3749b4bab816defedbd0b5",
 			"current_frame": "normal",
 			"custom": true,
 			"face_right": false,
-			"label": "_58ce8551",
-			"on_start_level": "
+			"label": "scene_starter",
+			"on_start_cutscene": "
 						[if( not level.player.get_stored_event('defeated_gazer_boss'),
 							if( not level.player.get_stored_event('continued_initial_prospera_conversation') and level.player.get_stored_event('finished_initial_exterior_prospera_conversation'),
 								scene_setup,
