--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -113,9 +113,9 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_58ce8551",
-			"on_start_level": "if( /*false*/ not level.player.get_stored_event('introduced_prosperas_workshop'),
+			"on_start_level": "if( not level.player.get_stored_event('introduced_prosperas_workshop'),
 									scene_setup,
-									remove_object(me)
+									no_cutscene_setup
 								)
 						
 			where scene_setup = [
@@ -125,6 +125,14 @@
 									fire_event(conversation_controller,'triggered'),
 									frogatto.add_control_lock([], 'prospera_cutscene'),
 								]
+								
+			where no_cutscene_setup = [
+										set(prospera.mid_x, 1600)
+										;
+										execute(prospera, move_to_standing() )
+										;
+										remove_object(me)
+									]
 								
 			where prospera = (obj prospera_npc <- get_object_or_die(level, 'prospera'))
 			where frogatto = (obj frogatto_playable <- level.player)
